--- a/src/M13n/Views/Home/Index.cshtml
+++ b/src/M13n/Views/Home/Index.cshtml
@@ -4,10 +4,10 @@
     <section class="featured">
         <div class="content-wrapper">
             <hgroup class="title">
-                <h1>@HomeStrings.Welcome</h1>
+                <h1>@HomeStrings.Home_Welcome</h1>
             </hgroup>
             <p>
-                @HomeStrings.FeatureText
+                @HomeStrings.Home_FeatureText
             </p>
             <p>
                 I'm sorry if I didn't get right some words or expression in your language.  Feel free to correct me with a pull request.
@@ -19,17 +19,17 @@
 <ol class="round">
     <li class="one">
         <h5>Getting Started</h5>
-        Dig in the source code and do some experimentations with this prototype or your own.  Glimpse is already installed and you can <a href="/Glimpse.axd">turn it On or Off</a>
+        Dig in the source code and experiment with this prototype.  
     </li>
 
     <li class="two">
-        <h5>Read Some Blog Posts on the Subject</h5>
-        <a href="http://adamyan.blogspot.ca/2010/02/aspnet-mvc-2-localization-complete.html">ASP.NET MVC 2 Localization complete guide</a><br/>
-        <a href="http://adamyan.blogspot.ca/2010/07/addition-to-aspnet-mvc-localization.html">Addition to ASP.NET MVC Localization - Using routing</a>
+        <h5>Experiment by yourself</h5>
+        <a href="https://github.com/dproteau/m13n">Fork this project on Github</a> and experiment all you want by yourself.<br />   
+        <a href="http://getglimpse.com/">Glimpse</a> is already installed and you can <a href="/Glimpse.axd">turn it On or Off</a>
     </li>
 
     <li class="three">
-        <h5>Experiment by Yourself</h5>
-        Experiment by yourself and go create something!  If you discover something new, don't be shy to share back.
+        <h5>Use your knowledge</h5>
+        Go and create something new!
     </li>
 </ol>
