--- a/src/M13n/Views/Shared/_CultureSwitchControl.cshtml
+++ b/src/M13n/Views/Shared/_CultureSwitchControl.cshtml
@@ -1,5 +1,4 @@
 ﻿@using M13n.Helpers
-@using M13n.Resources
 @{
     var rawUrl= this.Request.RawUrl;
     var curCulture = this.UICulture;
@@ -17,7 +16,7 @@ I do this because it more visual appealing in the prototype but PLEASE DON'T DO 
 {
     <li>
         <a href="@Url.Action("ChangeCulture", "Culture", new { lang = (int)cu, returnUrl = rawUrl, culture = curCulture })" id="culture_@cu.ToString()">
-            <img src="@Url.Content("~/Images/Flags/" + @cu.ToString() + ".png")" /> 
+            <img src="@Url.Content("~/Images/Flags/" + @cu.ToString() + ".png")" alt="" /> 
             @CultureNames.ResourceManager.GetString(cu.ToString()) 
         </a>
     </li>
