--- a/src/M13n/Views/Home/Index.cshtml
+++ b/src/M13n/Views/Home/Index.cshtml
@@ -3,15 +3,18 @@
 @section featured {
     <section class="featured">
         <div class="content-wrapper">
-            <hgroup class="title">
-                <h1>@HomeStrings.Home_Welcome</h1>
-            </hgroup>
+            <h1>@HomeStrings.Home_Welcome</h1>
             <p>
                 @HomeStrings.Home_FeatureText
             </p>
-            <p>
-                I'm sorry if I didn't get right some words or expression in your language.  Feel free to correct me with a pull request.
-            </p>
+            <ul>
+                <li>I'm sorry if I didn't get right some words or expression in your language.  Feel free to correct me with a pull request.
+                </li>
+                <li>Lo siento si no tuviera ciertas palabras o frases en su idioma correctamente. No dude en corregirme con una 'pull request'.
+                </li>
+                <li>Je suis désolé si certains mots ou expressions ne sont pas exactes dans votre langue. N'hésitez pas à me corriger avec un 'pull request'.
+                </li>
+            </ul>
         </div>
     </section>
 }
@@ -19,17 +22,21 @@
 <ol class="round">
     <li class="one">
         <h5>Getting Started</h5>
-        Dig in the source code and experiment with this prototype.  
+        Dig in the source code and experiment with this prototype.<br />
     </li>
 
     <li class="two">
         <h5>Experiment by yourself</h5>
-        <a href="https://github.com/dproteau/m13n">Fork this project on Github</a> and experiment all you want by yourself.<br />   
-        <a href="http://getglimpse.com/">Glimpse</a> is already installed and you can <a href="/Glimpse.axd">turn it On or Off</a>
+        <a href="https://github.com/dproteau/m13n">Fork this project on Github</a> and try out your ideas.<br />   
+        <a href="http://getglimpse.com/">Glimpse</a> is already installed if your want to inspect/debug routes and other inner workings of this demo (you can <a href="/Glimpse.axd">turn it On or Off</a> locally).
     </li>
 
     <li class="three">
         <h5>Use your knowledge</h5>
         Go and create something new!
+    </li>
+    <li class="four">
+        <h5>Get Involved</h5>
+        Help with this demo by bringing in your ideas and your knowledge on the subject.
     </li>
 </ol>
