--- a/src/M13n/Views/Shared/_CultureSwitchControl.cshtml
+++ b/src/M13n/Views/Shared/_CultureSwitchControl.cshtml
@@ -2,23 +2,42 @@
 @{
     var rawUrl= this.Request.RawUrl;
     var curCulture = this.UICulture;
+    var hasCultureInPath = rawUrl.Split('/').Contains(curCulture);
+    var cuString = string.Empty;
 }
 
 
 @*
 ---DISCLAIMER---
-I show flags in the links with the language name but country flags are NOT languages.
-I do this because it more visual appealing in the prototype but PLEASE DON'T DO THIS IN PRODUCTION.
+I show flags in the links with the language name BUT country flags are NOT languages.
+I did this because it's more visually appealing in the prototype but PLEASE DON'T DO THIS IN PRODUCTION.
 *@
 
-<ul>
-@foreach (CultureIdentifier cu in Enum.GetValues(typeof (CultureIdentifier)))
+@*
+TODO: Improve the culture control, this 'quick' if-else must be refactored in something more elegant
+*@
+
+<ul id="langselect">
+@foreach (CultureIdentifier cu in Enum.GetValues(typeof(CultureIdentifier)))
 {
     <li>
-        <a href="@Url.Action("ChangeCulture", "Culture", new { lang = (int)cu, returnUrl = rawUrl, culture = curCulture })" id="culture_@cu.ToString()">
-            <img src="@Url.Content("~/Images/Flags/" + @cu.ToString() + ".png")" alt="" /> 
-            @CultureNames.ResourceManager.GetString(cu.ToString()) 
-        </a>
+        @{
+            cuString = cu.ToString();
+            if (!(hasCultureInPath && string.CompareOrdinal(cuString, curCulture) == 0))
+            {
+                <a href="@Url.Action("ChangeCulture", "Culture", new {lang = (int) cu, returnUrl = rawUrl, culture = curCulture, area = ""})" id="culture_@cu.ToString()">
+                    <img src="@Url.Content("~/Images/Flags/" + cuString + ".png")" alt="" />
+                    @CultureNames.ResourceManager.GetString(cuString)                        
+                </a>
+            }
+            else
+            {
+                <strong>
+                    <img src="@Url.Content("~/Images/Flags/" + cuString + ".png")" alt="" />
+                    @CultureNames.ResourceManager.GetString(cuString)                        
+                </strong>
+            }
+        }
     </li>
 }
 </ul>
