--- a/src/M13n/Views/Shared/_Layout.cshtml
+++ b/src/M13n/Views/Shared/_Layout.cshtml
@@ -14,15 +14,18 @@
             <a href="https://github.com/dproteau/m13n">
                 <img style="position: absolute; top: 0; left: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_left_green_007200.png" alt="Fork me on GitHub">
             </a>
-            <div class="float-right">
+            <div>
+            <div class="">
                 @Html.Partial("_CultureSwitchControl")
             </div>
+           </div> 
             <div class="float-right">
                 <nav>
                     <ul id="menu">
-                        <li>@Html.ActionLink(AppStrings.Home, "Index", "Home")</li>
-                        <li>@Html.ActionLink(AppStrings.About, "About", "Home")</li>
-                        <li>@Html.ActionLink(AppStrings.Contact, "Contact", "Home")</li>
+                        <li>@Html.ActionLink(AppStrings.Home, "Index", "Home", new { area = ""}, null)</li>
+                        <li>@Html.ActionLink(AppStrings.About, "About", "Home", new { area = ""}, null)</li>
+                        <li>@Html.ActionLink(AppStrings.Contact, "Contact", "Home", new {area = ""}, null)</li>
+                        <li>@Html.ActionLink(AppStrings.Manage, "Index", "Dashboard", new {area = "Admin"}, null)</li>
                     </ul>
                 </nav>
             </div>
